--- a/angular-front-end/src/app/app.component.html
+++ b/angular-front-end/src/app/app.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <app-accueil style="display: inline"></app-accueil>
-<app-master-liste style="display: none"></app-master-liste>
-<app-univ-map style="display: none"></app-univ-map>
-<app-formulaires style="display: none"></app-formulaires>
+<app-master-liste style="display: inline"></app-master-liste>
+<app-univ-map style="display: inline"></app-univ-map>
+<app-formulaires style="display: inline"></app-formulaires>
 <div id="BandeauBasPage"></div>
