--- a/angular-front-end/src/app/univ-map/univ-map.component.html
+++ b/angular-front-end/src/app/univ-map/univ-map.component.html
@@ -1,3 +1,2 @@
-<p>
-  univ-map works!
-</p>
+<div #gmap style="width:60%;height:600px"></div>
+<app-marqueur style="width:40%;height:600px" [class.selected]="mrk === selectedMark"></app-marqueur>
