Utilisation de service pour recuperer les établissements

--- a/angular-front-end/src/app/marqueur/marqueur.component.html
+++ b/angular-front-end/src/app/marqueur/marqueur.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="mark">
+  <script>console.log(mark);</script>
   <h2>{{mark.name}} Detail : </h2>
   <p>Code Postal : {{mark.cp}}</p>
 </div>
