--- a/angular-front-end/src/app/app.component.html
+++ b/angular-front-end/src/app/app.component.html
@@ -1,11 +1,41 @@
 <div id="Entete"></div>
 
-<div id="BandeauOnglets">
+<div style="text-align:center">
+  
+    <div class = "container">
 
-</div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#"> {{title}} </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        
+                        <li class="nav-item active">
+                            <a class="nav-link" routerLink="/etablissement">Etablissements</a>
+                        </li>
 
-<app-accueil style="display: inline"></app-accueil>
-<app-master-liste style="display: inline"></app-master-liste>
-<app-univ-map style="display: inline"></app-univ-map>
-<app-formulaires style="display: inline"></app-formulaires>
-<div id="BandeauBasPage"></div>
+                        <li class="nav-item active">
+                            <a class="nav-link" routerLink="/formation">Formations</a>
+                        </li>
+
+                        <li class="nav-item active">
+                            <a class="nav-link" routerLink="/avisMaster">Déposer un avis</a>
+                        </li>
+                
+                    </ul>
+                </div>
+            </nav>
+
+        <router-outlet></router-outlet>
+
+        <app-accueil style="display: inline"></app-accueil>
+        <app-master-liste style="display: inline"></app-master-liste>
+        <app-univ-map style="display: inline"></app-univ-map>
+        <app-formulaires style="display: inline"></app-formulaires>
+  
+    </div>
+  
+  </div>
