--- a/angular-front-end/src/app/avis-master/avis-master.component.html
+++ b/angular-front-end/src/app/avis-master/avis-master.component.html
@@ -1,33 +1,186 @@
+<!-- Formulaire étudiant -->
 <form>
-    <div class="form-group row">
-      <div class="col">
-        <label for="inputMasterNom" class=" col-form-label">Intitulé</label>
-        <div class="dropdown" id ="inputMasterNom">
-         <button class="btn  dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Intitulé
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-           <a class="dropdown-item" href="#">Another action</a>
-           <a class="dropdown-item" href="#">Something else here</a>
-         </div>
-        </div>
+  <div class="form-row">
+    <H1>Etudiant</H1>
+  </div>
+  
+  <div class="form-row">
+      <div class="form-group col-md-6">
+          <label for="inputNom">Nom</label>
+          <input type="text" class="form-control" id="inputNom" placeholder="Nom">
       </div>
-     
-      <div class="col">
-          <label for="inputMasterNom" class=" col-form-label">Intitulé</label>
-          <div class="dropdown" id ="inputMasterNom">
-           <button class="btn  dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Intitulé
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-             <a class="dropdown-item" href="#">Another action</a>
-             <a class="dropdown-item" href="#">Something else here</a>
-           </div>
-          </div>
-        </div>  
-
+  </div>
+  
+  <div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="inputPrenom">Prenom</label>
+        <input type="password" class="form-control" id="inputPrenom" placeholder="Prenom">
     </div>
+  </div>
+
+  <div class="form-row">
+      <div class="form-group col-md-6">
+          <label for="inputAddress">Email</label>
+          <input type="email" class="form-control" id="inputAddress" placeholder="Email">
+      </div>
+  </div>
+  
+  <div class="form-row">
+      <div class="form-check col-md-6">
+          <label for="chkboxAutorisations">Autorisations d'utilisation de votre email <i class="far fa-question-circle"></i> </label>
+          <input type="checkbox" class="form-check-input" id="chkboxAutorisations">
+      </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputL3">Année de votre L3 :</label>
+        <select id="inputL3"  class="custom-select custom-select-lg mb-3">
+          <option >2015-2016</option>
+          <option >2016-2017</option>
+          <option selected>2017-2018</option>
+        </select>
+      </div>
+  </div>
+
+  <!--
+  <div class="form-row">
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
+    -->
 </form>
 
+<!-- Formulaire Master -->
+<form>
+    <!-- Première partie : Type -->
+    <div class="form-row">
+      <H1>Master <span class="badge badge-primary">1</span></H1>
+    </div>
+    
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputIntitule">Intitulé </label>
+            <input type="text" class="form-control" id="inputIntitule" >
+        </div>
+    </div>
+    
+    <div class="form-row">
+      <div class="form-group col-md-6">
+          <label for="inputType">Type</label>
+          <select id="inputType"  class="custom-select custom-select-lg mb-3">
+              <!-- TODO : insérer les types de master existant -->
+          </select>
+      </div>
+    </div>
+  
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputSpecialite">Spécialité</label>
+            <select id="inputSpecialite"  class="custom-select custom-select-lg mb-3">
+                <!-- TODO : insérer les spécialités de master existant -->
+            </select>
+        </div>
+    </div>
+    
+    <!-- Deuxième partie : Etablissement -->
+    <div class="form-row">
+        <H1>Master <span class="badge badge-primary">2</span></H1>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputEtablissement">Etablissement</label>
+            <select id="inputEtablissement"  class="custom-select custom-select-lg mb-3">
+                <!-- TODO : insérer les établissements existant -->
+            </select>
+        </div>
+    </div>
+      
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputCodePostal">Code postal</label>
+            <select id="inputCodePostal"  class="custom-select custom-select-lg mb-3">
+                <!-- TODO : insérer les CP + les villes associées -->
+            </select>
+        </div>
+    </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="inputPremiereAnnee">Première année</label>
+            <select id="inputPremiereAnnee"  class="custom-select custom-select-lg mb-3">
+                <!-- TODO : insérer les années -->
+            </select>
+        </div>
+    </div>
+    
+    <!-- Troisème partie : Avis -->
+    <div class="form-row">
+        <H1>Master <span class="badge badge-primary">3</span></H1>
+    </div>
+
+    <div class="form-row ">
+        <div class="col-md-6">
+            <table class="table table-hover ">
+                <thead>
+                    <tr>
+                        <th scope="col">Critère</th>
+                        <th scope="col"><i class="far fa-smile"></i></th>
+                        <th scope="col"><i class="far fa-meh"></i></th>
+                        <th scope="col"><i class="far fa-frown"></i></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Ambiance</th>
+                        <td>
+                            <div class="float-lg-left">
+                                <input type="radio" id="bien" name="radioAmbiance">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="float-lg-left">
+                                <input type="radio" id="moyen" name="radioAmbiance">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="float-lg-left">
+                                <input type="radio" id="mauvais" name="radioAmbiance">
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Qualité</th>
+                        <td>
+                            <div class="float-lg-left">
+                                <input type="radio" id="bien" name="radioQualite">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="float-lg-left">
+                                <input type="radio" id="moyen" name="radioQualite">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="float-lg-left">
+                                <input type="radio" id="mauvais" name="radioQualite">
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="avis">Quelque chose à ajouter ? </label>
+            <textarea class="form-control" id="avis" rows="1" placeholder="Exprimez vous !"></textarea>
+        </div>
+    </div>
+
+    <div class="form-row">
+        <button type="submit" class="btn btn-primary">Envoyer</button>
+    </div>
+
+</form>
