Meilleur accueil, ajout de routes

--- a/angular-front-end/src/app/accueil/accueil.component.html
+++ b/angular-front-end/src/app/accueil/accueil.component.html
@@ -1,3 +1,17 @@
-<p>
-  accueil works!
-</p>
+<main role="main" class="container">
+
+    <div class="jumbotron etudiant text-white">
+        <h1 class="text-dark">Je suis un étudiant</h1>
+        <p class="lead">Et je cherche un master...</p>
+        <a class="btn btn-lg btn-dark" href="" role="button">Voir les Masters sur une carte &raquo;</a>
+        <a class="btn btn-lg btn-dark" href="etablissement" role="button">Voir la liste des Masters &raquo;</a>
+    </div>
+
+    <div class="jumbotron ancien-etudiant text-white">
+        <h1 class="text-dark">J'ai fini mon master</h1>
+        <p class="lead">Et je souhaite partager mon expérience...</p>
+        <a class="btn btn-lg btn-dark" href="../../components/navbar/" role="button">Ajouter des informations sur un master &raquo;</a>
+    </div>
+
+
+</main>
