Début de refonte de avis master

--- a/angular-front-end/src/app/app.component.html
+++ b/angular-front-end/src/app/app.component.html
@@ -11,20 +11,24 @@
                     <a class="nav-link" href="/accueil">Accueil</a>
                 </li>
                 <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Masters
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Carte</a>
-                          <a class="dropdown-item" href="#">Liste</a>
-                        </div>
-                      </li>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Masters
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Carte</a>
+                        <a class="dropdown-item" href="#">Liste</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </nav>
 </header>
 
-<router-outlet></router-outlet>
+
+<main class="container">
+    <router-outlet></router-outlet>
+</main>
 
 <footer class="container">
     <hr>
