--- a/angular-front-end/src/app/univ-map/univ-map.component.html
+++ b/angular-front-end/src/app/univ-map/univ-map.component.html
@@ -1,2 +1,2 @@
 <div #gmap style="width:60%;height:600px"></div>
-<app-marqueur style="width:40%;height:600px" [class.selected]="mrk === selectedMark"></app-marqueur>
+<app-marqueur style="width:40%;height:600px" [mrk]="selectedMark"></app-marqueur>
