--- a/angular-front-end/src/app/univ-map/univ-map.component.html
+++ b/angular-front-end/src/app/univ-map/univ-map.component.html
@@ -1,2 +1,12 @@
-<div #gmap style="width:60%;height:600px"></div>
-<app-marqueur style="width:40%;height:600px" [mrk]="selectedMark"></app-marqueur>
+<!-- <div #gmap style="width:60%;height:600px"></div>
+<app-marqueur style="width:40%;height:600px" [mrk]="selectedMark"></app-marqueur> -->
+<table style="width:100%;height:600px">
+    <tr>
+        <td style="width:60%;height:600px">
+            <div #gmap style="width:100%;height:600px"></div>
+        </td>
+        <td style="width:40%;height:600px">
+            <app-marqueur [mrk]="selectedMark"></app-marqueur>
+        </td>
+    </tr>
+</table>
