--- a/angular-front-end/src/app/univ-map/univ-map.component.html
+++ b/angular-front-end/src/app/univ-map/univ-map.component.html
@@ -6,7 +6,12 @@
             <div #gmap style="width:100%;height:600px"></div>
         </td>
         <td style="width:40%;height:600px">
-            <app-marqueur [mrk]="selectedMark"></app-marqueur>
+            <div *ngIf="selectedMark">
+                <h2> Detail de <span class='nomEtab'>{{selectedMark.nom_etab}}</span> <span class='sigleEtab'>({{selectedMark.sigle_etab}})</span> : </h2>
+                <p>L'université se situe dans la ville de <span class='villeEtab'>{{selectedMark.ville_etab}}</span>, en <span class='regionEtab'>{{selectedMark.nom_region}}</span></p>
+                <p>Cet etablissement propose les masters suivant : </p>
+                <div id='listeMaster'></div>
+            </div>
         </td>
     </tr>
 </table>
