Ajout du formulaire pour ajouter un avis et tout et tout...

--- a/angular-front-end/src/app/accueil/accueil.component.html
+++ b/angular-front-end/src/app/accueil/accueil.component.html
@@ -10,7 +10,7 @@
     <div class="jumbotron ancien-etudiant text-white">
         <h1 class="text-dark">J'ai fini mon master</h1>
         <p class="lead">Et je souhaite partager mon expérience...</p>
-        <a class="btn btn-lg btn-dark" href="../../components/navbar/" role="button">Ajouter des informations sur un master &raquo;</a>
+        <a class="btn btn-lg btn-dark" href="avisMaster" role="button">Ajouter des informations sur un master &raquo;</a>
     </div>
 
 
