--- a/angular-front-end/src/app/formation-m/details-formation/details-formation.component.html
+++ b/angular-front-end/src/app/formation-m/details-formation/details-formation.component.html
@@ -3,7 +3,7 @@
   <div  role="main" class="container">
 
     <div class="jumbotron etudiant text-white">
-      <h1 class="text-light">{{formation.intitule_form}} {{formation.intitule_form}}</h1>
+      <h1 class="text-light">{{formation.sigle_form}} {{formation.intitule_form}}</h1>
       <h2 class="text-light">Etablissement : {{formation.nom_etab}} </h2>
       <h2 class="text-light">{{formation.ville_etab}} </h2> 
      
