--- a/angular-front-end/src/app/etablissement-m/liste-etablissement/liste-etablissement.component.html
+++ b/angular-front-end/src/app/etablissement-m/liste-etablissement/liste-etablissement.component.html
@@ -4,7 +4,7 @@
 
     <div class="list-group">
       <div *ngFor='let eta of etablissements'>
-        <a href="/etablissement/{{eta.id_etablissement}}" class="list-group-item list-group-item-action"> <i>{{eta.nom_etab}}</i>: {{eta.ville_etab}} {{eta.code_postal_etab}} </a>
+        <a href="/etablissement/{{eta.nom_etab}}" class="list-group-item list-group-item-action"> <i>{{eta.nom_etab}}</i>: {{eta.ville_etab}} {{eta.code_postal_etab}} </a>
       </div>
     </div>
     
