Map finit, utilisation BD prof, + getFormationById et ByEtab

--- a/angular-front-end/src/app/app.component.html
+++ b/angular-front-end/src/app/app.component.html
@@ -16,8 +16,8 @@
                         Masters
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Carte</a>
-                        <a class="dropdown-item" href="#">Liste</a>
+                        <a class="dropdown-item" href="map">Carte</a>
+                        <a class="dropdown-item" href="formation">Liste</a>
                     </div>
                 </li>
             </ul>
