--- a/angular-front-end/src/app/accueil/accueil.component.html
+++ b/angular-front-end/src/app/accueil/accueil.component.html
@@ -3,8 +3,9 @@
     <div class="jumbotron etudiant text-white">
         <h1 class="text-dark">Je suis un étudiant</h1>
         <p class="lead">Et je cherche un master...</p>
-        <a class="btn btn-lg btn-dark" href="" role="button">Voir les Masters sur une carte &raquo;</a>
-        <a class="btn btn-lg btn-dark" href="etablissement" role="button">Voir la liste des Masters &raquo;</a>
+        <a class="btn btn-lg btn-dark" href="map" role="button">Voir les Masters sur une carte &raquo;</a>
+        <a class="btn btn-lg btn-dark" href="etablissement" role="button">Voir la liste des Universités &raquo;</a>
+        <a class="btn btn-lg btn-dark" href="formation" role="button">Voir la liste des Masters &raquo;</a>
     </div>
 
     <div class="jumbotron ancien-etudiant text-white">
