--- a/angular-front-end/src/app/etablissement-m/ajouter-etablissement/ajouter-etablissement.component.html
+++ b/angular-front-end/src/app/etablissement-m/ajouter-etablissement/ajouter-etablissement.component.html
@@ -8,8 +8,8 @@
     
     <div class="form-row">
       <div class="col-md-4 mb-3">
-        <label for="validation_libelle">Libellé </label>
-        <input type="text" class="form-control" id="validation_libelle"  required>
+        <label for="validation_intitule">Intitulé </label>
+        <input type="text" class="form-control" id="validation_intitule"  required>
         <div class="valid-tooltip">
           Semble correct !
         </div>
