+Début affichage avis

--- a/angular-front-end/src/app/formation-m/details-formation/details-formation.component.html
+++ b/angular-front-end/src/app/formation-m/details-formation/details-formation.component.html
@@ -5,9 +5,16 @@
     <div class="jumbotron etudiant text-white">
       <h1 class="text-light">{{formation.sigle_form}} {{formation.intitule_form}}</h1>
       <h2 class="text-light">Etablissement : {{formation.nom_etab}} </h2>
-      <h2 class="text-light">{{formation.ville_etab}} </h2> 
-     
+      <h2 class="text-light">{{formation.ville_etab}} </h2>
     </div>
+
+ 
+
+    <div *ngIf="avis.length">
+      <div *ngFor='let a of avis'>
+      </div>
+    </div>
+
   
   </div>
 </div>
