Auto stash before merge of "master" and "origin/master"

--- a/angular-front-end/src/app/accueil/accueil.component.html
+++ b/angular-front-end/src/app/accueil/accueil.component.html
@@ -2,14 +2,14 @@
 
     <div class="jumbotron etudiant text-white">
         <h1 class="text-dark">Je suis un étudiant</h1>
-        <p class="lead">Et je cherche un master...</p>
+        <p class="lead">Et je cherche un master... <small>( ou j'ai pas encore d'idées... :/)</small></p>
         <a class="btn btn-lg btn-dark" href="map" role="button">Voir les Masters sur une carte &raquo;</a>
         <a class="btn btn-lg btn-dark" href="etablissement" role="button">Voir la liste des Universités &raquo;</a>
         <a class="btn btn-lg btn-dark" href="formation" role="button">Voir la liste des Masters &raquo;</a>
     </div>
 
     <div class="jumbotron ancien-etudiant text-white">
-        <h1 class="text-dark">J'ai fini mon master</h1>
+        <h1 class="text-dark">J'ai fini mes études</h1>
         <p class="lead">Et je souhaite partager mon expérience...</p>
         <a class="btn btn-lg btn-dark" href="avisMaster" role="button">Ajouter des informations sur un master &raquo;</a>
     </div>
