--- a/angular-front-end/src/app/etablissement-m/ajouter-etablissement/ajouter-etablissement.component.html
+++ b/angular-front-end/src/app/etablissement-m/ajouter-etablissement/ajouter-etablissement.component.html
@@ -1,60 +1,54 @@
-
-
 <div class="jumbotron etablissement text-white">
   <h1 class="text-light"> Ajouter un établissement </h1>
   <hr />
- 
-  <form class="needs-validation" novalidate>
-    
+
+  <form ngNativeValidate target="">
+
     <div class="form-row">
       <div class="col-md-4 mb-3">
         <label for="validation_intitule">Intitulé </label>
-        <input type="text" class="form-control" id="validation_intitule"  required>
-        <div class="valid-tooltip">
-          Semble correct !
-        </div>
+        <input type="text" class="form-control" id="validation_intitule" placeholder="Université ..." required>
       </div>
-      
+
       <div class="col-md-4 mb-3">
         <label for="validation_sigle">Sigle</label>
-        <input type="text" class="form-control" id="validation_sigle">
-        
+        <input type="text" class="form-control" id="validation_sigle" placeholder="UPS">
+
       </div>
-      
+
     </div>
-    
+
     <div class="form-row">
       <div class="col-md-3 mb-3">
         <label for="validation_ville">Ville</label>
-        <input type="text" class="form-control" id="validation_ville"  required>
-        <div class="invalid-tooltip">
-          Indiquez une ville, svp :) 
-        </div>
+        <input type="text" class="form-control" id="validation_ville" placeholder="Toulouse" required>
       </div>
+
       <div class="col-md-3 mb-3">
         <label for="validation_cp">Code postal</label>
-        <input type="text" class="form-control" id="validation_cp" required>
+        <input type="text" class="form-control" id="validation_cp" pattern="[0-9]{5}" title="Code postal à 5 chiffres seulement" placeholder="31400" required>
         <div class="invalid-tooltip">
           Il manque le code postal :(
         </div>
+
       </div>
       <div class="col-md-3 mb-3">
         <label for="validation_region">Région</label>
-        <input type="text" class="form-control" id="validation_region" required>
+        <input type="text" class="form-control" id="validation_region" placeholder="Occitanie" required>
         <div class="invalid-tooltip">
           Il nous faut une région !
         </div>
       </div>
       <div class="col-md-3 mb-3">
         <label for="validation_pays">Pays</label>
-        <input type="text" class="form-control" id="validation_pays" required>
+        <input type="text" class="form-control" id="validation_pays" placeholder="France" required>
         <div class="invalid-tooltip">
           LE PAYS, C'EST POUR NOTRE PROJET !
         </div>
       </div>
     </div>
- 
+
     <button class="btn btn-primary" type="submit">Ajouter</button>
   </form>
-  
+
 </div>
