--- a/angular-front-end/src/app/app.component.html
+++ b/angular-front-end/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark pt-3 pb-3 mb-4">
-        <a class="navbar-brand" href="#">Top navbar</a>
+        <a class="navbar-brand" href="#">Super projet web</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,6 +18,17 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="map">Carte</a>
                         <a class="dropdown-item" href="formation">Liste</a>
+                        <a class="dropdown-item" href="formation/ajouter">Ajouter</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Etablissements
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="etablissement">Liste</a>
+                        <a class="dropdown-item" href="etablissement/ajouter">Ajouter</a>
                     </div>
                 </li>
             </ul>
@@ -30,7 +41,9 @@
     <router-outlet></router-outlet>
 </main>
 
-<footer class="container">
-    <hr>
-    <p>© SuperCompany 2017-2018</p>
+<footer class="text-muted  bg-light">
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/LOGO_CHAMPOLLION.png" style="width: 5vw">
+        <p class="float-right">© SuperCompany 2017-2018</p>
+    </div>
 </footer>
