--- a/angular-front-end/src/app/formation-m/ajouter-formation/ajouter-formation.component.html
+++ b/angular-front-end/src/app/formation-m/ajouter-formation/ajouter-formation.component.html
@@ -1,62 +1,52 @@
 <div class="jumbotron formation text-white">
-  <h1 class="text-light"> Ajouter une formation  </h1>
+  <h1 class="text-light"> Ajouter une formation </h1>
   <hr />
- 
-  <form class="needs-validation" novalidate >
-    
+
+  <form  ngNativeValidate>
+
     <div class="form-row">
       <div class="col-md-4 mb-3">
         <label for="validation_intitule">Intitulé </label>
-        <input type="text" class="form-control" id="validation_intitule"  required>
+        <input type="text" class="form-control" id="validation_intitule" placeholder="Master de ..."  required>
       </div>
-      
+
       <div class="col-md-4 mb-3">
         <label for="validation_type">Type</label>
-        <input type="text" class="form-control" id="validation_type" required>
+        <input type="text" class="form-control" id="validation_type" placeholder="Master, licence, ..." required>
       </div>
     </div>
 
     <div class="form-row">
-        <div class="col-md-4 mb-3">
-          <label for="validation_specialite">Spécialité </label>
-          <input type="text" class="form-control" id="validation_specialite">
-        
-        </div>
-        
-        <div class="col-md-4 mb-3">
-          <label for="validation_sigle">Sigle</label>
-          <input type="text" class="form-control" id="validation_sigle">
-        </div>
+      <div class="col-md-4 mb-3">
+        <label for="validation_specialite">Spécialité </label>
+        <select class="form-control" id="validation_specialite" required>
+          <option *ngFor="let specialite of specialites">{{specialite.lib_specialite}}</option>
+        </select>
+
       </div>
 
-    
-    <div class="form-row">
-        <div class="col-md-3 mb-3">
-            <label for="validation_etablissement">Nom établissement</label>
-            <input type="text" class="form-control" id="validation_etablissement" required>
-            <div class="invalid-tooltip">
-              On a besoin de connaître l'établissement
-            </div>
-          </div>
-
-        <div class="col-md-3 mb-3">
-          <label for="validation_ville">Ville</label>
-          <input type="text" class="form-control" id="validation_ville"  required>
-          <div class="invalid-tooltip">
-              On a besoin de connaître la ville 
-          </div>
-        </div>
-     
-        <div class="col-md-3 mb-3">
-          <label for="validation_region">Région</label>
-          <input type="text" class="form-control" id="validation_region" required>
-          <div class="invalid-tooltip">
-              On a besoin de connaître la région 
-          </div>
-        </div>
+      <div class="col-md-4 mb-3">
+        <label for="validation_sigle">Sigle</label>
+        <input type="text" class="form-control" id="validation_sigle" placeholder="IARF" >  
+      </div>
     </div>
- 
+
+
+    <div class="form-row">
+      <div class="col-md-3 mb-3">
+        <label for="validation_etablissement">Nom établissement</label>
+        <select class="form-control" id="validation_etablissement" required>
+          <option *ngFor="let etablissement of etablissements">{{etablissement.nom_etab}}</option>
+        </select>
+        <small class="form-text text-muted">
+          <a href="etablissement/ajouter" style="text-decoration: none; background-color: none; color:white">Vous ne trouvez pas votre établissement ? Venez l'ajouter ici !</a>
+        </small>
+
+      </div>
+
+    </div>
+
     <button class="btn btn-primary" type="submit">Ajouter</button>
   </form>
-  
+
 </div>
