--- a/angular-front-end/src/app/etablissement-m/details-etablissement/details-etablissement.component.css
+++ b/angular-front-end/src/app/etablissement-m/details-etablissement/details-etablissement.component.css
@@ -5,3 +5,11 @@
 .ancien-etudiant {
     background: #FF9166 !important;
 }
+
+.card{
+    width : 50%;
+    margin-top: 1%;
+
+    color: black;
+
+}
