--- a/angular-front-end/src/app/formation-m/details-formation/details-formation.component.html
+++ b/angular-front-end/src/app/formation-m/details-formation/details-formation.component.html
@@ -54,6 +54,10 @@
       </div>
     </div>
 
+    <div *ngIf="!avis.length">
+      <h1>Il n'y a pas encore d'avis pour ce master.</h1>
+    </div>
+
   
   </div>
 </div>
